# executeJS

./: .cursorrules  .gitignore  .prettierignore  Cargo.toml  PR_SUMMARY.md  README.md  agent.md  oxlint.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/instructions/: *.instructions.md
.github/workflows/: build.yml  docs.yml  frontend-test.yml  javascript-lint.yml  rust-lint.yml  rust-test.yml
apps/executeJS/: index.html  package.json  test-setup.ts  vite.config.ts  vitest.config.ts
apps/executeJS/src/: App.css  App.test.tsx  App.tsx  index.css
apps/executeJS/src-tauri/: Cargo.toml  tauri.conf.json
apps/executeJS/src-tauri/capabilities/: main.json
apps/executeJS/src-tauri/icons/: icon.icns
apps/executeJS/src-tauri/src/: bootstrap.js  commands.rs  deno_runtime.rs  js_executor.rs  lib.rs  main.rs
apps/executeJS/src/app/: index.tsx  providers.tsx  router.tsx
apps/executeJS/src/features/execute-code/: model.test.ts  model.ts
apps/executeJS/src/features/manage-tabs/: model.ts
apps/executeJS/src/features/playground/: const.ts  store.ts  utils.ts
apps/executeJS/src/features/playground/model/: index.ts  store.test.ts  store.ts
apps/executeJS/src/features/tab/ui/: index.ts  tab-button.tsx  tab-title-mdal.tsx  tab-title-modal.tsx
apps/executeJS/src/pages/editor/: EditorPage.test.tsx  EditorPage.tsx  editor-page.test.tsx  editor-page.tsx  index.ts
apps/executeJS/src/pages/playground/: editor-page.tsx  index.ts  playground-groups.tsx  playground-page.test.tsx  playground-page.tsx
apps/executeJS/src/pages/settings/: settings-page.tsx
apps/executeJS/src/shared/: index.ts
apps/executeJS/src/shared/hooks/: use-click-outside.ts
apps/executeJS/src/shared/lib/: storage.ts
apps/executeJS/src/shared/types/: index.ts
apps/executeJS/src/shared/ui/: Button.tsx  Panel.tsx  index.ts
apps/executeJS/src/widgets/code-editor/: CodeEditor.test.tsx  CodeEditor.tsx  code-editor.tsx
apps/executeJS/src/widgets/output-panel/: OutputPanel.tsx  output-panel.tsx
apps/executeJS/src/widgets/playground/: index.ts  playground-widget.tsx
apps/executeJS/src/widgets/tab-bar/: TabBar.tsx
crates/deno-runtime/: Cargo.toml
crates/deno-runtime/src/: bootstrap.js  lib.rs  npm_resolver.rs
crates/hello-world/: Cargo.toml
crates/hello-world/src/: lib.rs
docs/: package.json  rspress.config.ts  tsconfig.json
docs/docs/: _meta.json  index.mdx
docs/docs/api/: commands.mdx
docs/docs/dev/: _meta.json  development.mdx
docs/docs/guide/: _meta.json  development.mdx  getting-started.mdx  live-demo.mdx  npm-modules.mdx
