[package]
name = "executeJS"
version = "0.1.0"
description = "ExecuteJS Tauri Application"
authors = ["ExecuteJS Team"]
license = "MIT"
repository = "https://github.com/executeJS/executeJS"
edition = "2021"

[lib]
name = "execute_js"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-devtools = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry", "env-filter"] }
tracing-appender = "0.2"
regex = "1.0"
bytes = "1.0"
futures-util = "0.3"
http-body-util = "0.1"
hyper-util = "0.1"
hyper-tls = "0.6"
hyper-rustls = "0.27"
tokio-native-tls = "0.3"
native-tls = "0.2"
tokio-rustls = "0.26"
tokio-stream = "0.1"
flate2 = "1.1"

# JavaScript 런타임 의존성 (Deno Core)
deno-runtime = { path = "../../../crates/deno-runtime" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
